@@ -95,7 +95,7 @@ ldm_session_new
 <TITLE>LdmGreeter</TITLE>
 LdmGreeter
 ldm_greeter_new
-ldm_greeter_connect
+ldm_greeter_connect_to_server
 ldm_greeter_get_hostname
 ldm_greeter_get_theme
 ldm_greeter_get_string_property
