@@ -11,6 +11,8 @@ Overview of changes in lightdm 0.3.0
     * Use the engine process name instead of a hardcoded value in theme files
     * Rename gnome theme to example-gtk-gnome
     * Add basic QT engine and theme
+    * Rename ldm_greeter_connect to ldm_greeter_connect_to_server so it doesn't
+      clash with GObject method name
 
 Overview of changes in lightdm 0.2.3
 
